--- a/style.css
+++ b/style.css
@@ -43,7 +43,8 @@ header :hover {
 .album .line .content img{
     width: 100%;
     height: 400px;
-    border: 3px solid #ffcccc;
+    border: 3px solid #ffcccc; 
+    border-radius: 25px;
 }
 
 .album .line .content :hover {
