--- a/style.css
+++ b/style.css
@@ -50,4 +50,5 @@ header :hover {
 .album .line .content :hover {
     transform: scale(1.1);
     transition: all 0.6s;
+    border: 3px solid #c44569; 
 }
